# second-brain-os

./: .gitignore  AGENTS.md  CANON.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  GROK.md  MEMORY.md  README.md  SKILL.md  mcp.json  pyproject.toml  second-brain-os.plugin  ziUw1Uik
.claude-plugin/: plugin.json
.claude/commands/: distill-inbox.md  ingest-images.md  patterns-detect.md  people-update.md  sbo-verify.md
.claude/skills/second-brain-os/: SKILL.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: test.yml
.grok/: acos-state.json
.grok/agents/: acos-excellence.md
.grok/hooks/: pre-tool-gate.sh  pretooluse-excellence.json  session-start-excellence.json  session-start-excellence.sh
.grok/skills/excellence-review/: SKILL.md
cowork-plugin/.claude-plugin/: plugin.json
docs/: architecture.md  composition-guide.md  cross-ai-portability.md  getting-started.md  ingestion-guide.md  paid-tier.md  privacy-model.md
scripts/: setup.ps1  setup.sh  verify-privacy.ps1  verify-privacy.sh
src/sbo_ingestion/: __init__.py  audit.py  dual_write.py  image_ingest.py  ingest.py  summarize.py  voice_check.py
templates/brain-vault-skeleton/: CLAUDE.md  README.md  _capture.md
templates/private-vault-skeleton/: .obsidian-no-sync  README.md
tests/: conftest.py  test_dual_write.py  test_handlers_chatgpt.py  test_handlers_claude_ai.py  test_image_handler.py  test_ingest.py  test_summarize.py  test_voice_check.py
tests/fixtures/: chatgpt-conversations-sample.json  claude-ai-export-sample.jsonl
(+21 files in other folders)
